<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_small"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    android:id="@+id/mainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/title_img"
        android:contentDescription="@string/app_name" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:longClickable="false"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:layout_gravity="center_horizontal"
            style="@style/HoloButtons"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button

            android:id="@+id/btnMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_player"
            android:layout_gravity="center_horizontal"
            style="@style/HoloButtons"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:layout_gravity="center_horizontal"
            style="@style/HoloButtons"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_gravity="center_horizontal"
            style="@style/HoloButtons"/>

    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:longClickable="false"
        android:layout_weight="1" />
</LinearLayout>
