<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="edu.uw.tcss450.kidfight_android.main.RegisterFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:layout_gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_input"
            android:layout_gravity="center"
            android:hint="@string/enter_username" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass_input"
            android:layout_gravity="center"
            android:hint="@string/enter_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_registration_button"
            android:layout_gravity="center"
            android:onClick="attemptLogin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_login"
            android:layout_gravity="center_horizontal"
            android:onClick="onRegisterButtonPressed" />
    </LinearLayout>
</FrameLayout>
