<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.tcss450.kidfight_android.main.MainFragment"
    android:id="@+id/main_fragment"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.38"
        android:layout_gravity="center_horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:id="@+id/singleplayer_button"
            android:layout_gravity="center_horizontal"
            style="@android:style/Widget.Holo.Button"
            android:textStyle="bold"
            android:enabled="true"
            android:textColor="@android:color/holo_blue_light"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@android:color/holo_blue_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01" />

        <Button
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_player"
            android:id="@+id/multiplayer_button"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:backgroundTintMode="multiply"
            android:onClick="onMultiplayerButtonPressed" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01" />

        <Button
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:id="@+id/options_button"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:backgroundTintMode="multiply"
            android:onClick="onOptionsButtonPressed" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/exit_button"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:enabled="true"
            android:textColor="@android:color/holo_blue_light"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@android:color/holo_blue_dark" />

    </LinearLayout>

</LinearLayout>
